--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 			<artifactId>spring-boot-starter</artifactId>
 	    </dependency>
 		
-		<!-- Code generation for Petstore API-->
+		<!-- Dependencies to enable compiling of the code generated from swagger.json - Petstore API-->
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
